Fix alignment issues with CSS

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,10 @@ html, body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    margin: 0px;
+}
+
+body {
+    padding: 10px;
 }
 
 main {
@@ -67,7 +70,7 @@ h4 {
 }
 
 footer {
-    width: 100vh;
+    width: 100%;
     max-width: 800px;
     color: var(--secondary-text-color);
     flex: 0 0 auto;
